--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <div class="message">
                     <div class="lyrics">
-                        <!-- <div class="lyric-page active" id="page1"><p>Gửi em... 🎄❤️</p></div>
+                        <div class="lyric-page active" id="page1"><p>Gửi em... 🎄❤️</p></div>
                         <div class="lyric-page" id="page2"><p>Giáng Sinh lại về, mang theo cái lạnh dễ thương của mùa đông…</p></div>
                         <div class="lyric-page" id="page3"><p>và cả những điều anh muốn nói với em từ lâu.</p></div>
                         <div class="lyric-page" id="page4"><p>Trong ánh đèn Noel lấp lánh,</p></div>
@@ -45,18 +45,7 @@
                         <div class="lyric-page" id="page20"><p>anh vẫn mong mang đến cho em cảm giác đẹp như phép màu Giáng Sinh.</p></div>
                         <div class="lyric-page" id="page21"><p>Cảm ơn em đã xuất hiện trong cuộc đời anh…</p></div>
                         <div class="lyric-page" id="page22"><p>dù là vô tình hay do ông già Noel sắp đặt. 🎅💫</p></div>
-                        <div class="lyric-page" id="page23"><p>Merry Christmas, tình yêu của anh. ❤️🎄</p></div> -->
-
-                        <div class="lyric-page active" id="page1"><p>Gửi em... 🎄❤️</p></div>
-                        <div class="lyric-page" id="page2"><p>Giáng Sinh lại về, mang theo cái lạnh dễ thương của mùa đông…</p></div>
-                        <div class="lyric-page" id="page3"><p>và cả những điều anh muốn nói với em từ lâu.</p></div>
-                        <div class="lyric-page" id="page4"><p>Trong ánh đèn Noel lấp lánh,</p></div>
-                        <div class="lyric-page" id="page5"><p>Chó TRANG - chó Trang và chó Trang</p></div>
-                        <div class="lyric-page" id="page6"><p>Chó TRANG - chó Trang và chó Trang</p></div>
-                        <div class="lyric-page" id="page7"><p>Chó TRANG - chó Trang và chó Trang</p></div>
-                        <div class="lyric-page" id="page8"><p>Chó TRANG - chó Trang và chó Trang</p></div>
-                        <div class="lyric-page" id="page9"><p>Chó TRANG - chó Trang và chó Trang</p></div>
-                        <div class="lyric-page" id="page10"><p>Merry Christmas, chó Trang 🎄</p></div>
+                        <div class="lyric-page" id="page23"><p>Merry Christmas, tình yêu của anh. ❤️🎄</p></div>
                     </div>
                 </div>
             </div>
